[#38] fix packages autocompletion after "/" reaching